[package]
name = "vaultfile"
version = "0.1.0"
authors = ["Daniel Gray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-soft = "0.3.3"
base64 = "0.2.1"
rsa = { version = "0.2.0", features = ["serde1"] }
rand = "0.7.2"
serde_json = "1.0.44"
serde = { version = "1.0", features = ["derive"] }