[package]
name = "vaultfile"
version = "0.1.0"
authors = ["Daniel Gray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
base64 = "0.13.0"
clap = "~2.33"
exitcode = "1.1.2"
rsa = { version = "0.6.1", features = ["serde"] }
rand_chacha = "0.3.1"
serde_json = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
